getVersions done here
