# platform/dtf-runner/src/main/java/com/pslcl/dtf/runner/rest/handlers/VersionsHandler.java
@@ -1,13 +1,18 @@
 package com.pslcl.dtf.runner.rest.handlers;
 
+import com.cstkit.common.FutureUtil;
 import com.cstkit.common.web.ErrorCodes;
 import com.cstkit.common.web.HttpStatus;
 import com.cstkit.common.web.TokenInfo;
 import com.cstkit.common.web.VertxUtil;
+import com.google.gson.Gson;
 import com.pslcl.dtf.core.runner.rest.RestVersion;
+import com.pslcl.dtf.core.runner.rest.module.Modules;
+import com.pslcl.dtf.core.runner.rest.testPlan.TestPlan;
 import com.pslcl.dtf.core.storage.DTFStorage;
 import com.pslcl.dtf.core.util.executor.BlockingExecutor;
 import com.pslcl.dtf.runner.rest.RestServiceInstance;
+import com.pslcl.dtf.runner.rest.storage.NotFoundException;
 import com.pslcl.dtf.runner.rest.storage.RestServiceStorage;
 import io.vertx.core.Handler;
 import io.vertx.core.http.HttpMethod;
@@ -21,12 +26,14 @@ public final class VersionsHandler implements Handler<RoutingContext>
     private final Logger logger;
     private final BlockingExecutor executor;
     private final RestServiceStorage storage;
+    private final Gson gson;
 
     public VersionsHandler(BlockingExecutor executor, RestServiceStorage storage)
     {
         logger = LoggerFactory.getLogger(this.getClass());
         this.storage = storage;
         this.executor = executor;
+        gson = new Gson();
     }
 
     @Override
@@ -40,45 +47,35 @@ public final class VersionsHandler implements Handler<RoutingContext>
 
     private void get(RoutingContext context)
     {
-        TokenInfo tokenInfo = context.get(VertxUtil.TOKEN_INFO_KEY);
         HttpServerRequest request = context.request();
         try
         {
-//            String pagingToken = request.getParam(Page.PagingToken);
-//            int count;
-//            try
-//            {
-//                count = Page.normalizeNumberOfItems(request.getParam(Page.PagingCount));
-//            }catch(Throwable ignored)
-//            {
-//                VertxUtil.errorResponse(context, HttpStatus.BAD_REQUEST, ErrorCodes.INVALID_REQUEST_PARAMETER, "Invalid paging count");
-//                return;
-//            }
-//
-//            storage.getKeyspaces(tokenInfo.getDomain(), pagingToken, count).handle((keyspacePage, t) ->
-//            {
-//                try
-//                {
-//                    if(t != null)
-//                        throw FutureUtil.unwrap(t);
-//                    VertxUtil.jsonResponse(context, HttpStatus.OK, keyspacePage.toJson());
-//                    //noinspection ReturnOfNull
-//                    return null;
-//                }
-//                catch(IllegalArgumentException ignored)
-//                {
-//                    VertxUtil.errorResponse(context, HttpStatus.BAD_REQUEST, ErrorCodes.INVALID_REQUEST_PARAMETER, "Invalid paging token");
-//                    //noinspection ReturnOfNull
-//                    return null;
-//                }
-//                catch(Throwable throwable)
-//                {
-//                    logger.warn("Internal error", throwable);
-//                    VertxUtil.errorResponse(context, HttpStatus.INTERNAL_SERVER_ERROR, ErrorCodes.INTERNAL_SERVER_ERROR, "An internal storage error has occured");
-//                    //noinspection ReturnOfNull
-//                    return null;
-//                }
-//            });
+            String filter = request.getParam(Modules.FilterParam);
+            String after = request.getParam(TestPlan.AfterParam);
+            storage.getVersions(filter, after).handle((versions, t) ->
+            {
+                try
+                {
+                    if(t != null)
+                        throw FutureUtil.unwrap(t);
+                    VertxUtil.jsonResponse(context, HttpStatus.OK, gson.toJson(versions));
+                    //noinspection ReturnOfNull
+                    return null;
+                }
+                catch(NotFoundException ignored)
+                {
+                    VertxUtil.errorResponse(context, HttpStatus.BAD_REQUEST, ErrorCodes.NOT_FOUND, ignored.getMessage());
+                    //noinspection ReturnOfNull
+                    return null;
+                }
+                catch(Throwable throwable)
+                {
+                    logger.warn("Internal error", throwable);
+                    VertxUtil.errorResponse(context, HttpStatus.INTERNAL_SERVER_ERROR, ErrorCodes.INTERNAL_SERVER_ERROR, "An internal storage error has occured");
+                    //noinspection ReturnOfNull
+                    return null;
+                }
+            });
         }catch(Throwable t)
         {
             logger.warn("Internal error", t);
